Add basic Client, Todos class, Strat work on server